### Added
- Philosopher protein inference. This feature is new and might be unstable, the second pass filtering and the protein reports are enable.
- Support for iTRAQ 4 and 8.

### Changed
- Added isotopic error to msfragger section in the pipeline configuration file.
- Updated to MSFragger 2.3 and TMT-Intewgrator 1.1.2

### Fixed
- Generic FASTA parser is now checking the decoy status of all entries.
- Unmodified peptides were being marked as being oxidated.
- Missing terminal mods because of capitalization.
- Fixed the sorting of the Reprint headers.
- FASTA protein report is back to the report command.

 
## Snapcraft
- `snap install philosopher`